--- a/index.html
+++ b/index.html
@@ -1,53 +1,62 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Image Captioning AI</title>
-		<meta name="description" content="Some ideas for progressive hover effects on various elements" />
-		<meta name="keywords" content="hover, proximity, progressive, feedback, effect, web development, css, javascript" />
-		<meta name="author" content="Codrops" />
-		<link rel="stylesheet" type="text/css" href="css/base.css" />
-		<link rel="stylesheet" type="text/css" href="css/demo5.css" />
-		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
-	</head>
-	<body class="demo-5">
-		<main>
-			<div class="message">Please view on a desktop with a mouse.</div>
-			<div class="content content--fixed">
-				<header class="codrops-header">
-					<h1 class="codrops-header__title">Welcome back!</h1>
-				</header>
-			</div>
-			<div class="content">
-				<form class="form">
-					<div class="form__title">> Create an account</div>
-					<div class="form__item">
-						<label class="form__label" for="firstname">First Name</label>
-						<input class="form__input" type="text" name="firstname" id="firstname" autocomplete="off">
-						<span class="form__placeholder">First Name</span>
-					</div>
-					<div class="form__item">
-						<label class="form__label" for="lastname">Last Name</label>
-						<input class="form__input" type="text" name="lastname" id="lastname" autocomplete="off">
-						<span class="form__placeholder">Last Name</span>
-					</div>
-					<div class="form__item">
-						<label class="form__label" for="email">Email Address</label>
-						<input class="form__input" type="email" name="email" id="email" autocomplete="off">
-						<span class="form__placeholder">Email Address</span>
-					</div>
-					<div class="form__item">
-						<input class="form__button" type="submit" name="register" value="Sign up">
-					</div>`
-				</button>
-				</form>
-			</div>
-		</main>
-		<script src="js/demo.js"></script>
-		<script src="js/TweenMax.min.js"></script>
-		<script src="js/nearby.js"></script>
-		<script src="js/charming.min.js"></script>
-		<script src="js/demo5.js"></script>
-	</body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Image Captioning AI</title>
+  <meta name="description" content="Some ideas for progressive hover effects on various elements" />
+  <meta name="keywords" content="hover, proximity, progressive, feedback, effect, web development, css, javascript" />
+  <meta name="author" content="Codrops" />
+  <link rel="stylesheet" type="text/css" href="css/base.css" />
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
+  <script>
+    document.documentElement.className = "js";
+    var supportsCssVars = function () {
+      var e,
+        t = document.createElement("style");
+      return (
+        (t.innerHTML = "root: { --tmp-var: bold; }"),
+        document.head.appendChild(t),
+        (e = !!(
+          window.CSS &&
+          window.CSS.supports &&
+          window.CSS.supports("font-weight", "var(--tmp-var)")
+        )),
+        t.parentNode.removeChild(t),
+        e
+      );
+    };
+    supportsCssVars() ||
+      alert(
+        "Please view this demo in a modern browser that supports CSS Variables."
+      );
+  </script>
+</head>
+
+<body class="demo-5">
+  <main >
+    <div class="video-background">
+      <video autoplay muted loop class="video">
+        <source src="./assets/bg-video.mp4" type="video/mp4" />
+      </video>
+  </div>
+    <div class="content-index content--fixed-index">
+      <header class="codrops-header-index">
+        <h1 class="codrops-header__title welcome-text">Welcome back!</h1>
+        
+      </header>
+      <div class="header-buttons">
+        <a href="./auth/login.html" class="index-btn">Login</a>
+        <a href="./auth/register.html" class="index-btn">Register</a>
+      </div>
+    </div>
+  </main>
+  <script src="js/base.js"></script>
+  <script src="js/TweenMax.min.js"></script>
+  <script src="js/nearby.js"></script>
+  <script src="js/charming.min.js"></script>
+  <script src="js/main.js"></script>
+</body>
+
 </html>
