--- a/auth/register.html
+++ b/auth/register.html
@@ -4,9 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Image Captioning AI</title>
-		<meta name="description" content="Some ideas for progressive hover effects on various elements" />
-		<meta name="keywords" content="hover, proximity, progressive, feedback, effect, web development, css, javascript" />
-		<meta name="author" content="Codrops" />
+		<link rel="icon" href="../assets/logo.svg">
 		<link rel="stylesheet" type="text/css" href="../css/base.css" />
 		<link rel="stylesheet" type="text/css" href="../css/main.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
