--- a/home.html
+++ b/home.html
@@ -1,24 +1,49 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Image Captioning AI</title>
-		<meta name="description" content="Some ideas for progressive hover effects on various elements" />
-		<meta name="keywords" content="hover, proximity, progressive, feedback, effect, web development, css, javascript" />
-		<meta name="author" content="Codrops" />
-		<link rel="stylesheet" type="text/css" href="css/base.css" />
-		<link rel="stylesheet" type="text/css" href="css/main.css" />
-		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
-	</head>
-	<body class="demo-5">
-		<main>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Image Captioning AI</title>
+	<link rel="stylesheet" href="https://use.typekit.net/dmq3uhj.css">
+	<link rel="icon" href="./assets/logo.svg">
+	<link rel="stylesheet" type="text/css" href="css/home.css" />
+	<script>document.documentElement.className = "js"; var supportsCssVars = function () { var e, t = document.createElement("style"); return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e }; supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
+</head>
 
-		</main>
-		<script src="js/base.js"></script>
-		<script src="js/TweenMax.min.js"></script>
-		<script src="js/nearby.js"></script>
-		<script src="js/charming.min.js"></script>
-		<script src="js/main.js"></script>
-	</body>
+<body>
+	<main>
+		<a class="logo dib" href="./home.html" aria-label="Wave logo homepage">~</a>
+		<h2 class="page-title line line--vertical">
+			<div class="dib" style="--clip: 100%;">Image Captioning AI</div>
+		</h2>
+
+		<nav class="links line line--vertical">
+			<div class="dib oh"><a href="0#" class="dib">Pricing</a></div>
+			<div class="dib oh"><a href="./auth/login.html" class="dib">Login</a></div>
+			<div class="dib oh"><a href="./auth/register.html" class="dib">Register</a></div>
+		</nav>
+		<div class="menu line line--vertical">
+			<div class="menu__inner">
+				<div class="oh">
+					<div class="menu__inner-translate">Future</div>
+				</div>
+			</div>
+		</div>
+
+
+		<h1 class="title line line--horizontal oh"> <div>Insomnia</div></h1>
+		<div class="subtitle oh"><div>records</div></div>
+
+		<span class="play dib" aria-label="Play">&#9658;</span>
+		<a class="credits credits--site line line--vertical" href="0#"><div class="credits--site-inner oh"><div>Group 1</div></div></a>
+		<span class="credits credits--author line line--horizontal">
+			<div class="dib" style="--clip: 100%;">Made by <a href="0#">Group 1</div></a>
+		</span>
+		<div class="year oh">
+			<div>2024</div>
+		</div>
+	</main>
+
+	<script src="./js/imagePreview.js"></script>
+	<body>
 </html>
