--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Some ideas for progressive hover effects on various elements" />
   <meta name="keywords" content="hover, proximity, progressive, feedback, effect, web development, css, javascript" />
   <meta name="author" content="Codrops" />
+  <link rel="icon" href="./assets/logo.svg">
   <link rel="stylesheet" type="text/css" href="css/base.css" />
   <link rel="stylesheet" type="text/css" href="css/main.css" />
   <script>
@@ -50,6 +51,7 @@
         <a href="./auth/login.html" class="index-btn">Login</a>
         <a href="./auth/register.html" class="index-btn">Register</a>
       </div>
+      <a class="form_link" href="./home.html">continue as a guest</a>
     </div>
   </main>
   <script src="js/base.js"></script>
