--- a/auth/register.html
+++ b/auth/register.html
@@ -1,53 +1,57 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Image Captioning AI</title>
-		<link rel="icon" href="../assets/logo.svg">
-		<link rel="stylesheet" type="text/css" href="../css/base.css" />
-		<link rel="stylesheet" type="text/css" href="../css/main.css" />
-		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
-	</head>
-	<body class="demo-5">
-		<main>
-			<div class="content content--fixed">
-				<header class="codrops-header">
-					<h1 class="codrops-header__title">Welcome back!</h1>
-				</header>
-			</div>
-			<div class="content">
-				<form class="form">
-					<div class="form__title">> Create an account</div>
-					<div class="form__item">
-						<label class="form__label" for="firstname">Full Name</label>
-						<input class="form__input" type="text" name="firstname" id="firstname" autocomplete="off">
-						<span class="form__placeholder">Full Name</span>
-					</div>
-					<div class="form__item">
-						<label class="form__label" for="email">Email Address</label>
-						<input class="form__input" type="email" name="email" id="email" autocomplete="off">
-						<span class="form__placeholder">Email Address</span>
-					</div>
-					<div class="form__item">
-						<label class="form__label" for="lastname">Password</label>
-						<input class="form__input" type="Password" name="password" id="password" autocomplete="off">
-						<span class="form__placeholder">Password</span>
-					</div>
-					<div class="form__item">
-						<input class="form__button" type="submit" name="register" value="Sign up">
-					</div>
-					<div class="form__item">
-						<a class="form_link" href="./login.html">Login</a>
-					</div>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Image Captioning AI</title>
+	<link rel="icon" href="../assets/logo.svg">
+	<link rel="stylesheet" type="text/css" href="../css/base.css" />
+	<link rel="stylesheet" type="text/css" href="../css/main.css" />
+	<script>document.documentElement.className = "js"; var supportsCssVars = function () { var e, t = document.createElement("style"); return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e }; supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
+</head>
+
+<body class="demo-5">
+	<main>
+		<div class="content content--fixed">
+			<header class="codrops-header">
+				<h1 class="codrops-header__title">Welcome back!</h1>
+			</header>
+		</div>
+		<div class="content">
+			<form class="form">
+				<a class="" href="../index.html" aria-label="Wave logo homepage"><img src="../assets/logo.svg"
+						alt=""></a>
+				<div class="form__title">> Create an account</div>
+				<div class="form__item">	
+					<label class="form__label" for="firstname">Full Name</label>
+					<input class="form__input" type="text" name="firstname" id="firstname" autocomplete="off">
+					<span class="form__placeholder">Full Name</span>
+				</div>
+				<div class="form__item">
+					<label class="form__label" for="email">Email Address</label>
+					<input class="form__input" type="email" name="email" id="email" autocomplete="off">
+					<span class="form__placeholder">Email Address</span>
+				</div>
+				<div class="form__item">
+					<label class="form__label" for="lastname">Password</label>
+					<input class="form__input password-input" type="Password" name="password" id="password" autocomplete="off" maxlength="20">
+					<span class="form__placeholder">Password</span>
+				</div>
+
+				<div class="form__item form_item_buttons">
+					<a class="form_link" href="./login.html">Login</a>
+					<input class="form__button" type="submit" name="register" value="sign up">
+				</div>
 				</button>
-				</form>
-			</div>
-		</main>
-		<script src="../js/base.js"></script>
-		<script src="../js/TweenMax.min.js"></script>
-		<script src="../js/nearby.js"></script>
-		<script src="../js/charming.min.js"></script>
-		<script src="../js/main.js"></script>
-	</body>
+			</form>
+		</div>
+	</main>
+	<script src="../js/base.js"></script>
+	<script src="../js/TweenMax.min.js"></script>
+	<script src="../js/nearby.js"></script>
+	<script src="../js/charming.min.js"></script>
+	<script src="../js/main.js"></script>
+</body>
+
 </html>
