--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Image Captioning AI</title>
-  <meta name="description" content="Some ideas for progressive hover effects on various elements" />
-  <meta name="keywords" content="hover, proximity, progressive, feedback, effect, web development, css, javascript" />
-  <meta name="author" content="Codrops" />
   <link rel="icon" href="./assets/logo.svg">
   <link rel="stylesheet" type="text/css" href="css/base.css" />
   <link rel="stylesheet" type="text/css" href="css/main.css" />
@@ -43,15 +40,15 @@
       </video>
   </div>
     <div class="content-index content--fixed-index">
+      <a class="logo dib" href="../index.html" aria-label="Wave logo homepage"><img src="./assets/logo-reverse.svg" alt=""></a>
       <header class="codrops-header-index">
         <h1 class="codrops-header__title welcome-text">Welcome back!</h1>
-        
       </header>
       <div class="header-buttons">
         <a href="./auth/login.html" class="index-btn">Login</a>
         <a href="./auth/register.html" class="index-btn">Register</a>
       </div>
-      <a class="form_link" href="./home.html">continue as a guest</a>
+      <a class="form_link-forgot" href="./home.html">continue as a guest</a>
     </div>
   </main>
   <script src="js/base.js"></script>
