--- a/auth/forgotPassword.html
+++ b/auth/forgotPassword.html
@@ -11,40 +11,31 @@
 	</head>
 	<body class="demo-5">
 		<main>
-			<div class="content content--fixed">
-				<header class="codrops-header">
-					<h1 class="codrops-header__title">Welcome back!</h1>
-				</header>
-			</div>
 			<div class="content">
-				<form class="form">
-					<a class="logo dib" href="../index.html" aria-label="Wave logo homepage"><img src="../assets/logo.svg" alt=""></a>
-					<div class="form__title">>Login to your account</div>
+				<form class="form" action="confirmation.html">
+					<div class="form__title">>forgot your password?</div>
+                         <h3>enter your email address below and we'll send you a
+						code to log in and reset your password</h3>
 					<div class="form__item">
 						<label class="form__label" for="email">Email Address</label>
 						<input class="form__input" type="email" name="email" id="email" autocomplete="off" required>
 						<span class="form__placeholder">Email Address</span>
 					</div>
 					<div class="form__item">
-						<label class="form__label" for="email">Password</label>
-						<input class="form__input" type="password" name="password" id="password" autocomplete="off" required>
-						<span class="form__placeholder">Password</span>
-					</div>
-					<div class="form__item form_item_buttons">
-						<a class="form_link" href="./register.html">Register</a>
-						<input class="form__button" type="submit" name="register" value="login">
+						<input class="form__button" type="submit" id="generateCodeBtn" name="reset" value="Send code">
 					</div>
 					<div class="form__item">
-						<a href="./forgotPassword.html" class="form_link-forgot">forgot password?</a>
+						<a class="form_link-forgot" href="./login.html">Back</a>
 					</div>
 				</button>
 				</form>
 			</div>
 		</main>
 		<script src="../js/base.js"></script>
-		<script src="../js/nearby.js"></script>
 		<script src="../js/TweenMax.min.js"></script>
+		<script src="../js/nearby.js"></script>
 		<script src="../js/charming.min.js"></script>
 		<script src="../js/main.js"></script>
+		<script src="../js/confirmationCode.js"></script>
 	</body>
 </html>
