--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
+
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +11,7 @@
 	<script>document.documentElement.className = "js"; var supportsCssVars = function () { var e, t = document.createElement("style"); return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e }; supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 </head>
 
-<body>
+<body class="demo-3 loading">
 	<main>
 		<a class="logo dib" href="./home.html" aria-label="Wave logo homepage">~</a>
 		<h2 class="page-title line line--vertical">
@@ -18,7 +19,7 @@
 		</h2>
 
 		<nav class="links line line--vertical">
-			<div class="dib oh"><a href="0#" class="dib">Pricing</a></div>
+			<div class="dib oh"><a href="./nav-pages/pricing.html" class="dib">Pricing</a></div>
 			<div class="dib oh"><a href="./auth/login.html" class="dib">Login</a></div>
 			<div class="dib oh"><a href="./auth/register.html" class="dib">Register</a></div>
 		</nav>
@@ -31,11 +32,26 @@
 		</div>
 
 
-		<h1 class="title line line--horizontal oh"> <div>Insomnia</div></h1>
-		<div class="subtitle oh"><div>records</div></div>
+		<div class="title line line--horizontal oh">
+			<div>Image Captioning AI</div>
+		</div>
+
+		<p class="content line line--horizontal">
+			<span>Effortlessly generate image descriptions using AI technology. Our tool provides detailed
+				descriptions for your images, helping enhance accessibility and understanding.</span>
+		</p>
+
+		<div class="subtitle oh">
+			<div>records</div>
+		</div>
+
 
 		<span class="play dib" aria-label="Play">&#9658;</span>
-		<a class="credits credits--site line line--vertical" href="0#"><div class="credits--site-inner oh"><div>Group 1</div></div></a>
+		<a class="credits credits--site line line--vertical" href="0#">
+			<div class="credits--site-inner oh">
+				<div>Group 1</div>
+			</div>
+		</a>
 		<span class="credits credits--author line line--horizontal">
 			<div class="dib" style="--clip: 100%;">Made by <a href="0#">Group 1</div></a>
 		</span>
@@ -45,5 +61,7 @@
 	</main>
 
 	<script src="./js/imagePreview.js"></script>
+
 	<body>
+
 </html>
