--- a/nav-pages/pricing.html
+++ b/nav-pages/pricing.html
@@ -7,12 +7,21 @@
 		<meta name="description" content="Some ideas for progressive hover effects on various elements" />
 		<meta name="keywords" content="hover, proximity, progressive, feedback, effect, web development, css, javascript" />
 		<meta name="author" content="Codrops" />
-		<link rel="stylesheet" type="text/css" href="css/home.css" />
+		<link rel="stylesheet" type="text/css" href="../css/pricing.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 	</head>
 	<body>
 		<main>
-			<h1>Hello World</h1>
+			<div class="container">
+			    <div class="card">
+			        <h3>Upload Images</h3>
+			        <div class="drop_box">
+			            <input type="file" hidden accept="image/png, image/jpeg" id="imageID" onchange="previewImage(event)" style="display:none;">
+			            <button class="btn" onclick="document.getElementById('imageID').click()">Choose Image</button>
+			            <img id="image-preview" src="#" alt="Image Preview" display: none;">
+			        </div>
+			    </div>
+			</div>
 		</main>
 	</body>
 </html>
