uploading pages and files

--- a/Frontend/home.html
+++ b/Frontend/home.html
@@ -19,7 +19,6 @@
 		</h2>
 
 		<nav class="links line line--vertical">
-			<div class="dib oh"><a href="./nav-pages/pricing.html" class="dib">Pricing</a></div>
 			<div class="dib oh"><a href="./auth/login.html" class="dib">Login</a></div>
 			<div class="dib oh"><a href="./auth/register.html" class="dib">Register</a></div>
 		</nav>
@@ -30,7 +29,6 @@
 				</div>
 			</div>
 		</div>
-
 
 		<div class="title line line--horizontal oh">
 			<div>Image Captioning AI</div>
@@ -45,11 +43,19 @@
 			<div>records</div>
 		</div>
 
+		<span class="play" aria-label="Play">
+			<button class="button button--fenrir">
+				<svg aria-hidden="true" class="progress" width="70" height="70" viewbox="0 0 70 70">
+					<path class="progress__circle" d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z" />
+					<path class="progress__path" d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z" pathLength="1" />
+				</svg>
+				<span>Start</span>
+			</button>
+		</span>
 
-		<span class="play dib" aria-label="Play">&#9658;</span>
-		<a class="credits credits--site line line--vertical" href="0#">
+		<a class="credits credits--site line line--vertical" href="./pages/pricing.html">
 			<div class="credits--site-inner oh">
-				<div>Group 1</div>
+				<div>Pricing</div>
 			</div>
 		</a>
 		<span class="credits credits--author line line--horizontal">
