--- a/Frontend/auth/confirmation.html
+++ b/Frontend/auth/confirmation.html
@@ -12,34 +12,33 @@
 	<body class="demo-5">
 		<main>
 			<div class="content">
-				<form id="passwordForm" class="form">
-					<div class="form__title">>change your password</div>
-                         <h3>choose a new password for your account</h3>
+				<form class="form">
+					<div class="form__title">>check your email</div>
+					<h3 id="confirmationMessage">We have sent you a six digit confirmation code to <span id="emailSpan"></span>.
+						 Please enter it below to confirm your email address.
+					</h3>
+
 					<div class="form__item">
-						<label class="form__label" for="password">new password</label>
-						<input class="form__input" type="password" name="password" id="password" autocomplete="off" >
-						<span class="form__placeholder">new password</span>
-					</div>
-					<div class="form__item form_item_pass">
-						<label class="form__label" for="password">confirm new password</label>
-						<input class="form__input" type="password" name="password" id="confirmPassword" autocomplete="off" >
-						<span class="form__placeholder">confirm new password</span>
-					</div>
-					<div class="form__item form_item_buttons">
-						<input id="savePasswordBtn" class="form__button" type="submit" name="register" value="save and login">
+						<label class="form__label" for="email">Enter 6-digit code</label>
+						<input class="form__input" type="number" name="code" id="code" autocomplete="off" required>
+						<span class="form__placeholder">Enter 6-digit code</span>
 					</div>
 					<div class="form__item">
-						<a href="../home.html" class="form_link-forgot">skip</a>
+						<input id="confirmBtn" class="form__button" type="submit" name="reset" value="Confirm">
+					</div>
+					<div class="form__item">
+						<a class="form_link-forgot" href="./forgotPassword.html">Back</a>
 					</div>
 				</button>
 				</form>
 			</div>
 		</main>
 		<script src="../js/base.js"></script>
-		<script src="../js/nearby.js"></script>
 		<script src="../js/TweenMax.min.js"></script>
+		<script src="../js/nearby.js"></script>
 		<script src="../js/charming.min.js"></script>
 		<script src="../js/main.js"></script>
-          <script src="../js/matchPassword.js"></script>
+		<script src="../js/redirectToNewPassword.js"></script>
+		<script src="../js/confirmationCode.js"></script>
 	</body>
 </html>
