--- a/Frontend/pages/pricing.html
+++ b/Frontend/pages/pricing.html
@@ -18,9 +18,19 @@
 			        <div class="drop_box">
 			            <input type="file" hidden accept="image/png, image/jpeg" id="imageID" onchange="previewImage(event)" style="display:none;">
 			            <button class="btn" onclick="document.getElementById('imageID').click()">Choose Image</button>
-			            <img id="image-preview" src="#" alt="Image Preview" display: none;">
+			            <img id="image-preview" src="#" alt="Image Preview" display: none;>
 			        </div>
 			    </div>
+			    
+			    <li class="content__item">
+					<button class="button button--fenrir">
+						<svg aria-hidden="true" class="progress" width="70" height="70" viewbox="0 0 70 70">
+							<path class="progress__circle" d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z" />
+							<path class="progress__path" d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z" pathLength="1" />
+						</svg>
+						<span>Go</span>
+					</button>
+				</li>
 			</div>
 		</main>
 	</body>
