uploading pages and files

--- a/home.html
+++ b/home.html
@@ -65,6 +65,17 @@
 			<div>2024</div>
 		</div>
 	</main>
+	<script>
+		document.addEventListener("DOMContentLoaded", function() {
+   		 const playButton = document.querySelector(".play");
+
+   		 	playButton.addEventListener("click", function() {
+        			// Redirect to the captioning.html page
+       			 window.location.href = "./pages/captioning.html";
+    			});
+		});
+
+	</script>
 
 	<script src="./js/imagePreview.js"></script>
 
