--- a/auth/login.html
+++ b/auth/login.html
@@ -11,27 +11,35 @@
 	</head>
 	<body class="demo-5">
 		<main>
+			<div class="content content--fixed">
+				<header class="codrops-header">
+					<h1 class="codrops-header__title">Welcome back!</h1>
+				</header>
+			</div>
 			<div class="content">
-				<form id="passwordForm" class="form">
-					<div class="form__title">>change your password</div>
-                         <h3>choose a new password for your account</h3>
+				<form class="form">
+					<a class="logo dib" href="../index.html" aria-label="Wave logo homepage"><img src="../assets/logo.svg" alt=""></a>
+					<div class="form__title">>Login to your account</div>
 					<div class="form__item">
-						<label class="form__label" for="password">new password</label>
-						<input class="form__input" type="password" name="password" id="password" autocomplete="off" >
-						<span class="form__placeholder">new password</span>
+						<label class="form__label" for="email">Email Address</label>
+						<input class="form__input" type="email" name="email" id="email" autocomplete="off" required>
+						<span class="form__placeholder">Email Address</span>
 					</div>
-					<div class="form__item form_item_pass">
-						<label class="form__label" for="password">confirm new password</label>
-						<input class="form__input" type="password" name="password" id="confirmPassword" autocomplete="off" >
-						<span class="form__placeholder">confirm new password</span>
+					<div class="form__item">
+						<label class="form__label" for="email">Password</label>
+						<input class="form__input" type="password" name="password" id="password" autocomplete="off" required>
+						<span class="form__placeholder">Password</span>
+						<span id="toggle-password" class="toggle-password">
+               				<img src="../assets/eye.svg" alt="">
+            				</span>
 					</div>
 					<div class="form__item form_item_buttons">
-						<input id="savePasswordBtn" class="form__button" type="submit" name="register" value="save and login">
+						<a class="form_link" href="./register.html">Register</a>
+						<input class="form__button" type="submit" name="register" value="login">
 					</div>
 					<div class="form__item">
-						<a href="../home.html" class="form_link-forgot">skip for now</a>
+						<a href="./forgotPassword.html" class="form_link-forgot">forgot password?</a>
 					</div>
-				</button>
 				</form>
 			</div>
 		</main>
@@ -40,6 +48,6 @@
 		<script src="../js/TweenMax.min.js"></script>
 		<script src="../js/charming.min.js"></script>
 		<script src="../js/main.js"></script>
-          <script src="../js/matchPassword.js"></script>
+		<script src="../js/showPassword.js"></script>
 	</body>
 </html>
