--- a/auth/register.html
+++ b/auth/register.html
@@ -37,6 +37,9 @@
 					<label class="form__label" for="lastname">Password</label>
 					<input class="form__input password-input" type="Password" name="password" id="password" autocomplete="off" maxlength="20">
 					<span class="form__placeholder">Password</span>
+					<span id="toggle-password" class="toggle-password">
+               			<img src="../assets/eye.svg" alt="">
+            			</span>
 				</div>
 
 				<div class="form__item form_item_buttons">
@@ -52,6 +55,7 @@
 	<script src="../js/nearby.js"></script>
 	<script src="../js/charming.min.js"></script>
 	<script src="../js/main.js"></script>
+	<script src="../js/showPassword.js"></script>
 </body>
 
 </html>
