--- a/home.html
+++ b/home.html
@@ -59,26 +59,19 @@
 			</div>
 		</a>
 		<span class="credits credits--author line line--horizontal">
-			<div class="dib" style="--clip: 100%;">Made by <a href="0#">Group 1</div></a>
+			<div class="dib" style="--clip: 100%;">Made by <a target="_blank" href="https://github.com/akbaralinabiev/image-captioning-ai">Group 1</div></a>
 		</span>
 		<div class="year oh">
 			<div>2024</div>
 		</div>
 	</main>
 	<script>
-		document.addEventListener("DOMContentLoaded", function() {
-   		 const playButton = document.querySelector(".play");
-
-   		 	playButton.addEventListener("click", function() {
-        			// Redirect to the captioning.html page
-       			 window.location.href = "./pages/captioning.html";
-    			});
-		});
+		
 
 	</script>
 
 	<script src="./js/imagePreview.js"></script>
-
+	<script src="./js/base.js"></script>
 	<body>
 
 </html>
