--- a/pages/pricing.html
+++ b/pages/pricing.html
@@ -1,27 +1,45 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Image Captioning AI</title>
-		<meta name="description" content="Some ideas for progressive hover effects on various elements" />
-		<meta name="keywords" content="hover, proximity, progressive, feedback, effect, web development, css, javascript" />
-		<meta name="author" content="Codrops" />
-		<link rel="stylesheet" type="text/css" href="../css/pricing.css" />
-		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
-	</head>
-	<body>
-		<main>
-			<div class="container">
-			    <div class="card">
-			        <h3>Upload Images</h3>
-			        <div class="drop_box">
-			            <input type="file" hidden accept="image/png, image/jpeg" id="imageID" onchange="previewImage(event)" style="display:none;">
-			            <button class="btn" onclick="document.getElementById('imageID').click()">Choose Image</button>
-			            <img id="image-preview" src="#" alt="Image Preview" display: none;>
-			        </div>
-			    </div>
-			</div>
-		</main>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Image Captioning AI</title>
+    <meta
+      name="description"
+      content="Some ideas for progressive hover effects on various elements"
+    />
+    <meta
+      name="keywords"
+      content="hover, proximity, progressive, feedback, effect, web development, css, javascript"
+    />
+    <meta name="author" content="Codrops" />
+    <link rel="stylesheet" type="text/css" href="../css/pricing.css" />
+    <script>
+      document.documentElement.className = "js";
+      var supportsCssVars = function () {
+        var e,
+          t = document.createElement("style");
+        return (
+          (t.innerHTML = "root: { --tmp-var: bold; }"),
+          document.head.appendChild(t),
+          (e = !!(
+            window.CSS &&
+            window.CSS.supports &&
+            window.CSS.supports("font-weight", "var(--tmp-var)")
+          )),
+          t.parentNode.removeChild(t),
+          e
+        );
+      };
+      supportsCssVars() ||
+        alert(
+          "Please view this demo in a modern browser that supports CSS Variables."
+        );
+    </script>
+  </head>
+  <body>
+    <main>
+      <h1>Coming soon...</h1>
+    </main>
+  </body>
 </html>
