new loader added

--- a/home.html
+++ b/home.html
@@ -12,6 +12,26 @@
 </head>
 
 <body class="demo-3 loading">
+
+	<div class="res-container">
+		<div class="res-row">
+			<div id="block-1 b3">
+
+				<div id="loader-wrap">
+					<div id="loading">
+						<div id="loading-center">
+							<div id="loading-center-absolute">
+								<div id="object"></div>
+								<div id="loader"></div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
+
 	<main>
 		<a class="logo dib" href="./home.html" aria-label="Wave logo homepage">~</a>
 		<h2 class="page-title line line--vertical">
@@ -46,8 +66,11 @@
 		<span class="play" aria-label="Play">
 			<button class="button button--fenrir">
 				<svg aria-hidden="true" class="progress" width="70" height="70" viewbox="0 0 70 70">
-					<path class="progress__circle" d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z" />
-					<path class="progress__path" d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z" pathLength="1" />
+					<path class="progress__circle"
+						d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z" />
+					<path class="progress__path"
+						d="m35,2.5c17.955803,0 32.5,14.544199 32.5,32.5c0,17.955803 -14.544197,32.5 -32.5,32.5c-17.955803,0 -32.5,-14.544197 -32.5,-32.5c0,-17.955801 14.544197,-32.5 32.5,-32.5z"
+						pathLength="1" />
 				</svg>
 				<span>Start</span>
 			</button>
@@ -59,19 +82,22 @@
 			</div>
 		</a>
 		<span class="credits credits--author line line--horizontal">
-			<div class="dib" style="--clip: 100%;">Made by <a target="_blank" href="https://github.com/akbaralinabiev/image-captioning-ai">Group 1</div></a>
+			<div class="dib" style="--clip: 100%;">Made by <a target="_blank"
+					href="https://github.com/akbaralinabiev/image-captioning-ai">Group 1</div></a>
 		</span>
 		<div class="year oh">
 			<div>2024</div>
 		</div>
 	</main>
 	<script>
-		
+
 
 	</script>
 
 	<script src="./js/imagePreview.js"></script>
 	<script src="./js/base.js"></script>
+	<script src="./js/loading.js"></script>
+
 	<body>
 
 </html>
