--- a/pages/captioning.html
+++ b/pages/captioning.html
@@ -1,81 +1,72 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Image Captioning AI</title>
-    <link rel="icon" href="../assets/logo.svg" />
-    <link rel="stylesheet" type="text/css" href="../css/main.css" />
-    <link rel="stylesheet" type="text/css" href="../css/captioning.css" />
-  </head>
 
-  <body class="demo-5">
-    <div class="page-loader">
-      <div class="spinner"></div>
-      <div class="txt">Initializing...</div>
-    </div>
-    <main>
-      <div class="header">
-        <img src="../assets/logo-reverse.svg" alt="" />
-        <h1 class="title">Image Captioning AI</h1>
-      </div>
-      <div class="upload-container">
-        <div class="upload-frame">
-          <div class="upload-button-container">
-            <label for="fileInput" class="custom-upload-btn"
-              ><img src="../assets/upload.svg" alt="" />Upload Image</label
-            >
-            <input
-              type="file"
-              id="fileInput"
-              accept="image/*"
-              onchange="previewImage(event)"
-            />
-          </div>
-          <div class="image-info" id="image-info"></div>
-        </div>
-        <div class="description-frame">
-          <div class="image-preview" id="imagePreview">
-            <img
-              id="image-preview"
-              src=""
-              alt="Image Preview"
-              style="display: none"
-            />
-          </div>
-          <div class="caption-container">
-            <p id="imageDescription">Description will appear here...</p>
-            <div class="caption-btn-container">
-              <button class="caption-btn">Get Caption</button>
-              <a id="copyButton" class="copy-text" onclick="copyText()"
-                >copy text</a
-              >
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Image Captioning AI</title>
+  <link rel="icon" href="../assets/logo.svg" />
+  <link rel="stylesheet" type="text/css" href="../css/main.css" />
+  <link rel="stylesheet" type="text/css" href="../css/captioning.css" />
+</head>
+
+<body class="demo-5">
+  <div class="res-container">
+    <div class="res-row">
+      <div id="block-1 b3">
+        <div id="loader-wrap">
+          <div id="loading">
+            <div id="loading-center">
+              <div id="loading-center-absolute">
+                <div id="object"></div>
+                <div id="loader"></div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="back-home-div">
-        <a href="../home.html" class="form_link-forgot back-home"
-          ><img class="back-arrow" src="../assets/back.svg" alt="" />back
-          home</a
-        >
-        <a onclick="clearImage()" class="form_link-forgot clear back-home"
-          >clear <img src="../assets/Iconly-Delete-1714337985967.svg" alt=""
-        /></a>
+    </div>
+  </div>
+  <main>
+    <div class="header">
+      <img src="../assets/logo-reverse.svg" alt="" />
+      <h1 class="title">Image Captioning AI</h1>
+    </div>
+    <div class="upload-container">
+      <div class="upload-frame">
+        <div class="upload-button-container">
+          <label for="fileInput" class="custom-upload-btn"><img src="../assets/upload.svg" alt="" />Upload Image</label>
+          <input type="file" id="fileInput" accept="image/*" onchange="previewImage(event)" />
+        </div>
+        <div class="image-info" id="image-info"></div>
       </div>
-    </main>
-    <script src="../js/imgPreview.js"></script>
-    <script src="../js/textCopy.js"></script>
-    <script src="../js/imageInfo.js"></script>
-    <script src="../js/clearImg.js"></script>
+      <div class="description-frame">
+        <div class="image-preview" id="imagePreview">
+          <img id="image-preview" src="" alt="Image Preview" style="display: none" />
+        </div>
+        <div class="caption-container">
+          <p id="imageDescription">Description will appear here...</p>
+          <div class="caption-btn-container">
+            <button class="caption-btn">Get Caption</button>
+            <a id="copyButton" class="copy-text" onclick="copyText()">copy text</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="back-home-div">
+      <a href="../home.html" class="form_link-forgot back-home"><img class="back-arrow" src="../assets/back.svg"
+          alt="" />back
+        home</a>
+      <a onclick="clearImage()" class="form_link-forgot clear back-home">clear <img
+          src="../assets/Iconly-Delete-1714337985967.svg" alt="" /></a>
+    </div>
+  </main>
+  <script src="../js/imgPreview.js"></script>
+  <script src="../js/textCopy.js"></script>
+  <script src="../js/imageInfo.js"></script>
+  <script src="../js/clearImg.js"></script>
+  <script src="../js/loading.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-      $(window).on("load", function () {
-        setTimeout(function () {
-          $(".page-loader").fadeOut("slow");
-        }, 3000);
-      });
-    </script>
-  </body>
+</body>
+
 </html>
