--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <a href="./auth/login.html" class="index-btn">Login</a>
         <a href="./auth/register.html" class="index-btn">Register</a>
       </div>
-      <a class="form_link-forgot" href="./home.html">continue as a guest</a>
+      <!-- <a class="form_link-forgot" href="./home.html">continue as a guest</a> -->
     </div>
   </main>
   <script src="js/base.js"></script>
