--- a/auth/register.html
+++ b/auth/register.html
@@ -1,4 +1,4 @@
- !DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" class="no-js">
 
 <head>
@@ -24,7 +24,7 @@
 				<div class="form__title">Create an account</div>
 				<div class="form__item">
 					<label class="form__label" for="fullname">Full Name</label>
-					<input class="form__input" type="text" name="fullname" id="fullname" autocomplete="off">
+					<input class="form__input" type="text" name="fullname" id="fullname" autocomplete="off" required>
 					<span class="form__placeholder">Full Name</span>
 				</div>
 				<div class="form__item">
