--- a/pages/captioning.html
+++ b/pages/captioning.html
@@ -42,7 +42,7 @@
     <div class="upload-container">
       <div class="upload-frame">
         <div class="upload-button-container">
-          <label for="fileInput" class="custom-upload-btn"><img src="../assets/upload.svg" alt="" />Upload Image</label>
+          <label for="fileInput" class="custom-upload-btn">Upload Image</label>
           <input type="file" id="fileInput" accept="image/*" onchange="previewImage(event)" />
         </div>
         <div class="image-info" id="image-info"></div>
