--- a/pages/captioning.html
+++ b/pages/captioning.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Image Captioning AI</title>
-  <link rel="icon" href="../assets/logo.svg" />
+  <link rel="icon" href="../assets/logo.svg"/>
   <link rel="stylesheet" type="text/css" href="../css/main.css" />
   <link rel="stylesheet" type="text/css" href="../css/captioning.css" />
 </head>
@@ -58,19 +58,22 @@
         <div class="caption-container">
           <p id="imageDescription">Description will appear here...</p>
           <div class="caption-btn-container">
-            <button class="caption-btn">Get Caption</button>
+            <button class="caption-btn" id="generateCaptionBtn" onclick="getCaption()">Get Caption</button>
             <a id="copyButton" class="copy-text" onclick="copyText()">copy text</a>
+            <p id="percentageCounter"></p>
           </div>
         </div>
       </div>
     </div>
   </main>
+
   <script src="../js/imgPreview.js"></script>
   <script src="../js/textCopy.js"></script>
   <script src="../js/imageInfo.js"></script>
   <script src="../js/clearImg.js"></script>
   <script src="../js/loading.js"></script>
   <script src="../js/modal.js"></script>
+  <script src="../js/getCaption.js"></script>
 </body>
 
 </html>
